WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144338
automatic table layout doesn't honor "max-width" on table cells, when distributing width between them
https://bugs.webkit.org/show_bug.cgi?id=144338
Summary
automatic table layout doesn't honor "max-width" on table cells, when distrib...
Daniel Holbert
Reported
2015-04-28 10:44:17 PDT
Created
attachment 251861
[details]
testcase 1 What steps will reproduce the problem? 1. Load attached testcase. Expected results: The blue table cell should be skinny (clamped by its "max-width" style). Actual results: The blue table cell is wide (disregarding its "max-width" style). Firefox 37 (Gecko), IE 11 (Trident), and Opera 12.16 (Presto) all give "Expected results". Chrome 43 and Safari 5.1 give "Actual results". I also filed this as a Blink bug (since both Blink and WebKit are affected):
https://code.google.com/p/chromium/issues/detail?id=482057
Attachments
testcase 1
(409 bytes, text/html)
2015-04-28 10:44 PDT
,
Daniel Holbert
no flags
Details
Safari 15.5 differs from other browsers
(361.95 KB, image/png)
2022-06-12 18:37 PDT
,
Ahmad Saleem
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2022-06-12 18:37:21 PDT
Created
attachment 460194
[details]
Safari 15.5 differs from other browsers I am able to reproduce this bug in Safari 15.5 on macOS 12.4 and all other browsers as shown in the picture works similar to each other except Safari. In Chrome, it got fixed from "LayoutNG" project rolling out from Chrome 91. Thanks!
Radar WebKit Bug Importer
Comment 2
2026-02-28 23:53:35 PST
<
rdar://problem/171459245
>
Ahmad Saleem
Comment 3
2026-02-28 23:54:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59664
EWS
Comment 4
2026-03-09 14:14:00 PDT
Committed
308934@main
(34394ef2a45b): <
https://commits.webkit.org/308934@main
> Reviewed commits have been landed. Closing PR #59664 and removing active labels.
Ahmad Saleem
Comment 5
2026-03-10 02:52:29 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/58389
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug